# kdevcargo

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  kdevcargo.kdev4
icons/: CMakeLists.txt
src/: CMakeLists.txt  cargobuildjob.cpp  cargobuildjob.h  cargoexecutionconfig.cpp  cargoexecutionconfig.h  cargoexecutionconfig.ui  cargoplugin.cpp  cargoplugin.h  kdevcargo.cpp  kdevcargo.h  kdevcargo.json
